--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,20 @@
 {
+    "version": 2,
     "builds": [
         {
             "src": "demo/wsgi.py",
             "use": "@vercel/python",
             "config": {
                 "maxLambdaSize": "15mb",
-                "runtime": "python3.9"
+                "runtime": "python"
             }
         }
     ],
     "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
         {
             "src": "/(.*)",
             "dest": "demo/wsgi.py"
