--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,10 @@
   "builds": [
     {
       "src": "demo/wsgi.py",
-      "use": "@ardnt/vercel-python-wsgi",
+      "use": "@vercel-python-wsgi",
       "config": {
-        "runtime": "python3.9"
+        "runtime": "python3.9",
+        "output": "dist" 
       }
     }
   ],
