--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,10 @@
   "builds": [
     {
       "src": "demo/wsgi.py",
-      "use": "@vercel-python-wsgi",
+      "use": "@vercel/python-wsgi",
       "config": {
         "runtime": "python3.9",
-        "output": "dist" 
+        "maxLambdaSize": "15mb"
       }
     }
   ],
