--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [
     {
       "src": "demo/wsgi.py",
-      "use": "@vercel/python-wsgi",
+      "use": "@vercel/python",
       "config": {
         "runtime": "python3.9",
         "maxLambdaSize": "15mb"
